Add icons, font and style the nav bar

--- a/index.html
+++ b/index.html
@@ -7,19 +7,32 @@
 
 <html>
 	<head>
+        <meta charset="UTF-8">
         <title>Kévin SPINICCI</title>
         <link rel="stylesheet" href="style.css">
-	</head>
+        <!-- Bootstrap icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+        <!-- Material google's icons -->
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+        <!-- Google's font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+            </head>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link nav-title" href="/">Kévin SPINICCI</a>
         </div>
         <div class="nav-main">
             <a class="nav-link" href="#aboutme" title="Details about me an my interest.">About me</a>
-            <a class="nav-link" href="#under-construction">Under construction</a>
-
+            <a class="nav-link" href="#research">Research</a>
+            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link" href="#contact">Contact</a>
         </div>
         <div class="nav-right">
+            <button class="nav-button">
+                <i class="material-symbols-outlined material-icons md-36">brightness_6</i>
+            </button>
         </div>
     </nav>
 	<body>
