--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </head>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a class="nav-link nav-title" href="/">Kévin SPINICCI</a>
+            <a class="nav-link title" href="/">Kévin SPINICCI</a>
         </div>
         <div class="nav-main">
             <a class="nav-link" href="#aboutme" title="Details about me an my interest.">About me</a>
@@ -36,15 +36,17 @@
         </div>
     </nav>
 	<body>
-        <section id="aboutme" class="aboutme body-section">
-            <div>
-                <h1>About me</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vehicula, mauris nec hendrerit euismod, mi enim viverra justo, nec auctor libero velit et leo. Sed ac vulputate mauris. Sed sagittis hendrerit tortor eget facilisis. Praesent tincidunt ut sapien vitae vulputate. In gravida aliquam massa, ac bibendum ipsum feugiat non. Integer risus tellus, tristique sed risus a, semper eleifend magna. Donec rutrum ultrices enim vel mattis. Phasellus lacinia vehicula molestie.
-                </p>
-            </div>
-            <div>
-                <img src="assets/Unknown_Member.jpg" alt="Profile Picture" width="256px">
+        <section id="aboutme" class="body-section">
+            <div class="aboutme">
+                <div class="aboutme-main">
+                    <h1 class="aboutme-title">About me</h1>
+                    <span class="aboutme-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vehicula, mauris nec hendrerit euismod, mi enim viverra justo, nec auctor libero velit et leo. Sed ac vulputate mauris. Sed sagittis hendrerit tortor eget facilisis. Praesent tincidunt ut sapien vitae vulputate. In gravida aliquam massa, ac bibendum ipsum feugiat non. Integer risus tellus, tristique sed risus a, semper eleifend magna. Donec rutrum ultrices enim vel mattis. Phasellus lacinia vehicula molestie.
+                    </span>
+                </div>
+                <div class="aboutme-right">
+                    <img src="assets/Unknown_Member.jpg" alt="Profile Picture" width="256px">
+                </div>
             </div>
         </section>
 
