Add Lorem ipsum for each section

--- a/index.html
+++ b/index.html
@@ -50,13 +50,43 @@
             </div>
         </section>
 
-        <section id="under-construction" class="under-construction body-section">
+        <section id="research" class="body-section">
             <div>
-                <h1>Website is under construction !</h1>
+                <h1 class="section-title">Research</h1>
             </div>
             <div>
-                <img src="assets/pexels-ferarcosn-211122.jpg" alt="Under construction" height="360px" >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
+
+                Curabitur dignissim blandit massa, et scelerisque metus suscipit id. Integer aliquet rutrum leo, at porttitor ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer vulputate elit pulvinar, semper tortor sed, commodo ex. Nam sit amet tincidunt diam. Morbi pulvinar dui vitae pretium ullamcorper. Ut lacinia dictum eros, a convallis elit tristique et. Sed sed malesuada massa. Quisque ex lorem, auctor sed placerat quis, lacinia id lacus. Cras euismod vulputate luctus.
+
+                Aenean non scelerisque urna. Quisque id facilisis massa. Duis rutrum aliquet porttitor. Fusce tempor hendrerit nibh, in porttitor nunc vulputate at. Maecenas non tincidunt ex. Pellentesque sodales metus orci, sed pharetra ex pharetra vitae. Curabitur eget tortor molestie, faucibus nibh vitae, aliquet lectus. Vestibulum mollis velit sit amet orci eleifend, in rutrum leo feugiat. Aenean ligula massa, tincidunt id tempus ac, semper eget nisi. Fusce varius massa metus, vitae scelerisque purus bibendum in. In odio ex, elementum id lorem ut, semper aliquam quam. Duis at lacinia tellus, id vehicula velit. In sit amet pretium nibh, vel sagittis tellus. Curabitur hendrerit neque sed quam suscipit varius. Etiam sed eros rhoncus, molestie mauris a, tempor turpis.
+
+                Nam aliquet, orci a ultrices hendrerit, purus sapien pharetra urna, nec scelerisque quam odio ac tortor. Nam tincidunt felis id arcu sagittis dignissim. Aliquam vehicula mi mauris, at sodales massa commodo nec. Aliquam hendrerit est eget ornare accumsan. Pellentesque ultricies pulvinar dolor, et fermentum enim convallis dictum. Mauris suscipit sapien vel faucibus hendrerit. Proin elementum nec mauris in congue. Sed varius tempor turpis. Nullam pellentesque enim malesuada congue lobortis. Maecenas non magna tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget metus sed nunc egestas consectetur non a neque. 
             </div>
         </section>
+
+        <section id="skills" class="body-section">
+            <div>
+                <h1 class="section-title">Skills</h1>
+            </div>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
+
+                Curabitur dignissim blandit massa, et scelerisque metus suscipit id. Integer aliquet rutrum leo, at porttitor ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer vulputate elit pulvinar, semper tortor sed, commodo ex. Nam sit amet tincidunt diam. Morbi pulvinar dui vitae pretium ullamcorper. Ut lacinia dictum eros, a convallis elit tristique et. Sed sed malesuada massa. Quisque ex lorem, auctor sed placerat quis, lacinia id lacus. Cras euismod vulputate luctus.
+
+                Aenean non scelerisque urna. Quisque id facilisis massa. Duis rutrum aliquet porttitor. Fusce tempor hendrerit nibh, in porttitor nunc vulputate at. Maecenas non tincidunt ex. Pellentesque sodales metus orci, sed pharetra ex pharetra vitae. Curabitur eget tortor molestie, faucibus nibh vitae, aliquet lectus. Vestibulum mollis velit sit amet orci eleifend, in rutrum leo feugiat. Aenean ligula massa, tincidunt id tempus ac, semper eget nisi. Fusce varius massa metus, vitae scelerisque purus bibendum in. In odio ex, elementum id lorem ut, semper aliquam quam. Duis at lacinia tellus, id vehicula velit. In sit amet pretium nibh, vel sagittis tellus. Curabitur hendrerit neque sed quam suscipit varius. Etiam sed eros rhoncus, molestie mauris a, tempor turpis.
+
+                Nam aliquet, orci a ultrices hendrerit, purus sapien pharetra urna, nec scelerisque quam odio ac tortor. Nam tincidunt felis id arcu sagittis dignissim. Aliquam vehicula mi mauris, at sodales massa commodo nec. Aliquam hendrerit est eget ornare accumsan. Pellentesque ultricies pulvinar dolor, et fermentum enim convallis dictum. Mauris suscipit sapien vel faucibus hendrerit. Proin elementum nec mauris in congue. Sed varius tempor turpis. Nullam pellentesque enim malesuada congue lobortis. Maecenas non magna tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget metus sed nunc egestas consectetur non a neque. 
+            </div>
+        </section>
+
+        <section id="contact" class="body-section">
+            <div>
+                <h1 class="section-title">Contact</h1>
+            <div>
+
+            </div>
+        </section>
+
 	</body>
 </html> 
