--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     Creation date: 2025-08-26
 -->
 
-<html>
+<html class="light">
 	<head>
         <meta charset="UTF-8">
         <title>Kévin SPINICCI</title>
@@ -21,7 +21,7 @@
             </head>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a class="nav-link title" href="/">Kévin SPINICCI</a>
+            <a class="nav-title" href="/">Kévin SPINICCI</a>
         </div>
         <div class="nav-main">
             <a class="nav-link" href="#aboutme" title="Details about me an my interest.">About me</a>
@@ -39,7 +39,7 @@
         <section id="aboutme" class="body-section">
             <div class="aboutme">
                 <div class="aboutme-main">
-                    <h1 class="aboutme-title">About me</h1>
+                    <h1 class="aboutme-title section-title">About me</h1>
                     <span class="aboutme-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vehicula, mauris nec hendrerit euismod, mi enim viverra justo, nec auctor libero velit et leo. Sed ac vulputate mauris. Sed sagittis hendrerit tortor eget facilisis. Praesent tincidunt ut sapien vitae vulputate. In gravida aliquam massa, ac bibendum ipsum feugiat non. Integer risus tellus, tristique sed risus a, semper eleifend magna. Donec rutrum ultrices enim vel mattis. Phasellus lacinia vehicula molestie.
                     </span>
