--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <a class="nav-link" onclick="toggleNavbar()" href="#contact">Contact</a>
         </div>
         <div class="nav-right">
-            <button class="nav-button">
-                <i class="material-symbols-outlined material-icons md-36">brightness_6</i>
+            <button class="nav-button" onclick="toggleLightDarkMode()">
+                <i id="nav-theme-icon" class="material-symbols-outlined material-icons md-36">light_mode</i>
             </button>
             <button class="nav-button" onclick="toggleNavbar()">
                 <i id="nav-toggle-icon" class="material-symbols-outlined material-icons md-36">menu</i>
