style pour la section 'aboutme'

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 	<body>
         <section id="aboutme" class="body-section">
-            <div class="aboutme">
+            <div class="aboutme card">
                 <div class="aboutme-main">
                     <h1 class="aboutme-title section-title">About me</h1>
                     <span class="aboutme-description">
@@ -49,7 +49,7 @@
                     </span>
                 </div>
                 <div class="aboutme-right">
-                    <img src="assets/Unknown_Member.jpg" alt="Profile Picture" width="256px">
+                    <img class="aboutme-picture" src="assets/Unknown_Member.jpg" alt="Profile Picture" width="256px">
                 </div>
             </div>
         </section>
