ajout section contact

--- a/index.html
+++ b/index.html
@@ -182,8 +182,30 @@
         <section id="contact" class="body-section">
             <div>
                 <h1 class="section-title">Contact</h1>
-            <div>
-
+            <div class="contact-list card">
+                <div class="contact-item">
+                   <span>
+                        Want to connect ? Mail me !
+                   </span> 
+                </div>
+                <div class="contact-item">
+                    <i class="material-symbols-outlined material-icons md-36">mail</i>
+                    <a href="mailto:john.doe@example.com">john.doe@example.com</a>
+                </div>
+                <div class="contact-item">
+                    <a href="https://github.com/" target="_blank">
+                        <i class="material-symbols-outlined material-icons md-36">link</i>
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        <i class="material-symbols-outlined material-icons md-36">link</i>
+                    </a>
+                    <a href="https://orcid.org/" target="_blank">
+                        <i class="material-symbols-outlined material-icons md-36">link</i>
+                    </a>
+                    <a href="https://www.researchgate.net/" target="_blank">
+                        <i class="material-symbols-outlined material-icons md-36">link</i>
+                    </a>
+                </div>
             </div>
         </section>
 
