suppression classe 'card' pour contact-list

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <section id="contact" class="body-section">
             <div>
                 <h1 class="section-title">Contact</h1>
-            <div class="contact-list card">
+            <div class="contact-list">
                 <div class="contact-item">
                    <span>
                         Want to connect ? Mail me !
