item sous forme de card avec ombre et highlight

--- a/index.html
+++ b/index.html
@@ -65,161 +65,22 @@
                 <h1 class="section-title">Research</h1>
             </div>
 
-            <div>
-                <h2 class="section-subtitle">Background</h2>
-                <div class="background-list">
+            <div class="card-list">
 
-                    <div class="background-item card">
-                        <div class="job-title">
-                            <h3>Job title</h3>
-                        </div>
-                        <div class="job-info">
-                            <span class="job-date">DD/MM/YYYY - DD/MM/YYYY</span>
-                            <span class="job-location">Location, country</span>
-                        </div>
-                        <div class="job-desc">
-                            <span>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="background-item card">
-                        <div class="job-title">
-                            <h3>Job title</h3>
-                        </div>
-                        <div class="job-info">
-                            <span class="job-date">DD/MM/YYYY - DD/MM/YYYY</span>
-                            <span class="job-location">Location, country</span>
-                        </div>
-                        <div class="job-desc">
-                            <span>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="background-item card">
-                        <div class="job-title">
-                            <h3>Job title</h3>
-                        </div>
-                        <div class="job-info">
-                            <span class="job-date">DD/MM/YYYY - DD/MM/YYYY</span>
-                            <span class="job-location">Location, country</span>
-                        </div>
-                        <div class="job-desc">
-                            <span>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div>
-                <h2 class="section-subtitle">Interest</h2>
-
-                <div class="interest-list">
-
-                    <div class="interest-item card">
-                        <div>
-                            <h3 class="interest-title">Interested in ...</h3>
-                        </div>
-                        <div>
-                            <span class="interest-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="interest-item card">
-                        <div>
-                            <h3 class="interest-title">Interested in ...</h3>
-                        </div>
-                        <div>
-                            <span class="interest-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="interest-item card">
-                        <div>
-                            <h3 class="interest-title">Interested in ...</h3>
-                        </div>
-                        <div>
-                            <span class="interest-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="interest-item card">
-                        <div>
-                            <h3 class="interest-title">Interested in ...</h3>
-                        </div>
-                        <div>
-                            <span class="interest-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        <section id="skills" class="body-section">
-            <div>
-                <h1 class="section-title">Skills</h1>
-            </div>
-            <div class="skill-list">
-
-                <div class="skill-item card">
-                    <div>
-                        <h3 class="skill-title">skilled in ...</h3>
+                <div class="card-item card-shadow card-hover">
+                    <div class="card-header">
+                        <h3 class="card-header-title">Item title</h3>
+                        <p class="card-header-info">Click to expand</p>
                     </div>
                     <div>
-                        <span class="skill-desc">
+                        <span class="card-desc">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
                         </span>
                     </div>
                 </div>
 
-                <div class="skill-item card">
-                    <div>
-                        <h3 class="skill-title">skilled in ...</h3>
-                    </div>
-                    <div>
-                        <span class="skill-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                        </span>
-                    </div>
-                </div>
-
-                <div class="skill-item card">
-                    <div>
-                        <h3 class="skill-title">skilled in ...</h3>
-                    </div>
-                    <div>
-                        <span class="skill-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                        </span>
-                    </div>
-                </div>
-
-                <div class="skill-item card">
-                    <div>
-                        <h3 class="skill-title">skilled in ...</h3>
-                    </div>
-                    <div>
-                        <span class="skill-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                        </span>
-                    </div>
-                </div>
             </div>
+
         </section>
 
         <section id="contact" class="body-section">
