ajout toggle pour étendre/réduire une card

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="card-list">
 
-                <div class="card-item card-shadow card-hover">
+                <div class="card-item card-shadow card-hover card-collapse" onclick="toggleExpandCard(this)">
                     <div class="card-header">
                         <h3 class="card-header-title">Item title</h3>
                         <p class="card-header-info">Click to expand</p>
