--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
         <link href="assets/fontawesome/fontawesome-free-7.0.1-web/css/sharp-thin.css" rel="stylesheet" />
         <link href="assets/fontawesome/fontawesome-free-7.0.1-web/css/sharp-duotone-thin.css" rel="stylesheet" />
     </head>
+
+    <template id="simple-card">
+        <style>
+            :host{
+                display: contents;
+            }
+        </style>
+        <link rel="stylesheet" href="style.css" />
+        <div class="card-item card-shadow card-hover card-collapse" onclick="toggleExpandCard(this)">
+            <div class="card-header">
+                <h3 class="card-header-title">Item title</h3>
+                <p class="card-header-info">Click to expand</p>
+            </div>
+            <div>
+                <span class="card-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
+                </span>
+            </div>
+        </div>
+    </template>
+
     <nav id="nav-bar" class="nav-bar">
         <div class="nav-left">
             <a class="nav-title" href="/">Kévin SPINICCI</a>
@@ -67,17 +88,9 @@
 
             <div class="card-list">
 
-                <div class="card-item card-shadow card-hover card-collapse" onclick="toggleExpandCard(this)">
-                    <div class="card-header">
-                        <h3 class="card-header-title">Item title</h3>
-                        <p class="card-header-info">Click to expand</p>
-                    </div>
-                    <div>
-                        <span class="card-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
-                        </span>
-                    </div>
-                </div>
+                <simple-card></simple-card>
+                <simple-card></simple-card>
+                <simple-card></simple-card>
 
             </div>
 
