--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@
         <link href="assets/fontawesome/fontawesome-free-7.0.1-web/css/sharp-duotone-thin.css" rel="stylesheet" />
     </head>
 
-    <template id="simple-card">
+    <template id="regular-card">
+        <style>
+            :host{
+                display: contents;
+            }
+        </style>
+        <link rel="stylesheet" href="style.css" />
+        <div class="card-item card-shadow card-collapse">
+            <div class="card-header">
+                <h3 class="card-header-title">
+                    <slot name="card-title">Card title</slot>
+                </h3>
+            </div>
+            <div>
+                <span class="card-desc">
+                    <slot name="card-desc">
+                        Sample card description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum fermentum ipsum, id ornare sem mattis id. Quisque sed dolor sit amet tellus condimentum iaculis. Quisque gravida laoreet sapien, nec euismod eros viverra eget. Phasellus sit amet rhoncus nibh. Sed non ipsum est. Nunc rutrum finibus massa quis semper. Duis nec neque cursus, ultrices tellus at, lacinia erat. Aenean at eros ligula. Fusce bibendum eu velit in molestie.
+                    </slot>
+                </span>
+            </div>
+        </div>
+    </template>
+
+    <template id="expand-card">
         <style>
             :host{
                 display: contents;
@@ -92,9 +115,8 @@
 
             <div class="card-list">
 
-                <simple-card></simple-card>
-                <simple-card></simple-card>
-                <simple-card></simple-card>
+                <regular-card></regular-card>
+                <expand-card></expand-card>
 
             </div>
 
