--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </span>
                 </div>
                 <div class="aboutme-right">
-                    <img class="aboutme-picture" src="assets/Unknown_Member.jpg" alt="Profile Picture" width="256px">
+                    <img class="aboutme-picture" src="assets/Unknown_Member.jpg" alt="Profile Picture">
                 </div>
             </div>
         </section>
